# audiodotturn

./: .bumpversion.cfg  AudioDotTurn.py  EXAMPLES.md  EXAMPLES.rst  LICENSE  MANIFEST.in  README.md  README.rst  USAGE.md  USAGE.rst  config.ini  mp3-py.py  pyproject.toml  setup.py
adt/: run.py
adt/config/: config.py
adt/construct/: construction.py
adt/database/: __init__.py
audiodotturn/: __init__.py  adt.py  cli_runner.py  errors.py  parsers.py  run.py
audiodotturn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
audiodotturn/commands/: __init__.py  create.py  set.py  view.py
audiodotturn/config/: __init__.py  config.ini  config.json  config.py  config_manage.py  config_path.py
audiodotturn/construct/: __init__.py  construction.py
audiodotturn/create_tools/: __init__.py  constructors.py  database.py  extractors.py
audiodotturn/database/: __init__.py  database.py
audiodotturn/errors/: __init__.py  errors.py
audiodotturn/extract/: __init__.py  extraction.py
audiodotturn/parser/: __init__.py  parser.py  parsers.py
audiodotturn/runners/: __init__.py  cli.py  cli_helpers.py
audiodotturn/view_tools/: __init__.py  artists.py  songs.py
src/: AudioDotTurn.py  __init__.py  cli_runner.py  config.py  parsers.py
src/commands/: __init__.py  create.py  view.py
src/config/: config.json  config.py
