[build-system]
requires = ["setuptools >= 46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'audiodotturn'
description = 'A tool for formatting and organizing music files, mainly for files with no metadata.'
authors = [
    {name = "tairenfd", email = "tairenfd@mailbox.org"},
]
readme = "README.rst"
license = {file = "LICENSE"}
keywords = [
    'audio',
    'music',
    'organizer',
    'metadata',
    'formatter',
    'tagger',
    'manager',
    'cli'
]
dependencies = [
    'rich',
    'markdown-it-py',
    'mdurl',
    'Pygments'
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Environment :: Console',
    'Programming Language :: Python :: 3',
    'Topic :: Utilities'
]

dynamic = ["version"]

[project.urls]
homepage = "https://audiodotturn.tairenfd.xyz"
repository = "https://github.com/tairenfd/audiodotturn"

[project.optional-dependencies]
docs = [
    'readthedocs-sphinx-search==0.2.0',
    'sphinx-automodapi==0.13',
    'sphinx-rtd-theme==1.1.1',
    'sphinx_autodoc_typehints==1.22',
    'sphinxcontrib-applehelp==1.0.4',
    'sphinxcontrib-devhelp==1.0.2',
    'sphinxcontrib-htmlhelp==2.0.1',
    'sphinxcontrib-jsmath==1.0.1',
    'sphinxcontrib-qthelp==1.0.3',
    'sphinxcontrib-serializinghtml==1.1.5'
]

[tool.setuptools.dynamic]
version = {attr = "audiodotturn.__version__"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}

[project.scripts]
audiodotturn = 'audiodotturn.runners.cli:main'